--- a/preview.html
+++ b/preview.html
@@ -29,14 +29,35 @@
       }
 
       .label-top {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         font-size: 18px;
         font-weight: bold;
+      }
+
+      .zoom-controls {
+        margin-bottom: 15px;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+      }
+
+      .zoom-controls button {
+        padding: 4px 10px;
+        border: none;
+        border-radius: 6px;
+        background: #444;
+        color: #ddd;
+        cursor: pointer;
+      }
+
+      .zoom-controls button:hover {
+        background: #666;
       }
 
       .frame-wrapper {
         display: flex;
         align-items: center;
+        transform-origin: top center;
       }
 
       .label-side {
@@ -69,8 +90,15 @@
     <!-- Nome do celular -->
     <div id="device-name" class="label-top">Samsung Galaxy A15 5G</div>
 
+    <!-- Controles de zoom -->
+    <div class="zoom-controls">
+      <button id="zoom-in">+</button>
+      <span id="zoom-label">100% (padrão)</span>
+      <button id="zoom-out">-</button>
+    </div>
+
     <!-- Preview com dimensões -->
-    <div class="frame-wrapper">
+    <div id="frame-container" class="frame-wrapper">
       <div id="height-label" class="label-side">845px</div>
       <iframe id="preview" src="http://localhost:8081" title="Expo App"></iframe>
       <div id="width-label" class="label-side">390px</div>
@@ -89,6 +117,44 @@
       const nameLabel = document.getElementById("device-name");
       const widthLabel = document.getElementById("width-label");
       const heightLabel = document.getElementById("height-label");
+      const zoomIn = document.getElementById("zoom-in");
+      const zoomOut = document.getElementById("zoom-out");
+      const zoomLabel = document.getElementById("zoom-label");
+      const frameContainer = document.getElementById("frame-container");
+
+      let zoom = 1.0; // zoom inicial (100%)
+
+      function updateZoom() {
+        frameContainer.style.transform = `scale(${zoom})`;
+        const percent = Math.round(zoom * 100);
+        zoomLabel.textContent = percent + "% " + (percent === 100 ? "(padrão)" : "");
+      }
+
+      // Botões de zoom
+      zoomIn.addEventListener("click", () => {
+        zoom += 0.05;
+        updateZoom();
+      });
+
+      zoomOut.addEventListener("click", () => {
+        if (zoom > 0.1) {
+          zoom -= 0.05;
+          updateZoom();
+        }
+      });
+
+      // Atalhos de teclado (+ e -)
+      document.addEventListener("keydown", (event) => {
+        if (event.key === "+" || event.key === "=") {
+          zoom += 0.05;
+          updateZoom();
+        } else if (event.key === "-") {
+          if (zoom > 0.1) {
+            zoom -= 0.05;
+            updateZoom();
+          }
+        }
+      });
 
       // Atualiza preview ao trocar celular
       select.addEventListener("change", () => {
@@ -98,11 +164,15 @@
         nameLabel.textContent = d.name;
         widthLabel.textContent = d.w + "px";
         heightLabel.textContent = d.h + "px";
+        zoom = 1.0; // resetar para 100% ao trocar
+        updateZoom();
       });
 
-      // inicial
+      // Inicial
       iframe.style.width = devices.galaxy.w + "px";
       iframe.style.height = devices.galaxy.h + "px";
+      updateZoom();
     </script>
   </body>
 </html>
+-
