feat: Botões de zoom agora não mudam de lugar após clique.

--- a/preview.html
+++ b/preview.html
@@ -54,6 +54,13 @@
         background: #666;
       }
 
+      /* largura fixa pro label central */
+      #zoom-label {
+        display: inline-block;
+        min-width: 120px; /* ajusta se quiser mais ou menos espaço */
+        text-align: center;
+      }
+
       .frame-wrapper {
         display: flex;
         align-items: center;
